src/components/Main/main.module.css
.main {
  max-width: 1280px;
  justify-self: center;
}

.container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 40px;
  height: 100%;
  overflow: hidden;
}


::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: #2f2f37;
}

::-webkit-scrollbar-thumb {
  border: 3px solid #8585ad;
  background: #8585ad;
}

